# mind-palace

./: 404.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
assets/code_snippets/: ml_experiments.ipynb
backend/: index.html
backend/concurrency_parallelism/: index.html
backend/efficient_programming/: index.html
backend/load_balancer/: index.html
backend/message_broker/: index.html
backend/oop/: index.html
backend/testing/: index.html
coding_interviews/live_coding/: index.html
docs/: index.md
docs/assets/code_snippets/: fluent_python_book.ipynb  live_coding.ipynb
docs/backend/: concurrency_parallelism.md  design_patterns.md  efficient_programming.md  index.md  load_balancer.md  message_broker.md  oop.md  testing.md
docs/coding_interviews/: live_coding.md
docs/machine_learning/: index.md  math.md
docs/machine_learning/nlp/: index.md  information_search.md  text_classification.md  (+2 more)
docs/software_architecture/: index.md
frontend/: index.html
machine_learning/: index.html  train_glowTTS.ipynb
machine_learning/math/: index.html
machine_learning/nlp/: index.html
projects/: index.html
projects/age_classification/: index.html
projects/book_summarizer/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/backend/: index.html
site/frontend/: index.html
site/machine_learning/: index.html
site/projects/: index.html
site/search/: search_index.json
site/software_architecture/: index.html
software_architecture/: index.html
software_architecture/architectural_patterns/: mv_patterns.drawio
(+19 files in other folders)
