[tool.poetry]
name = "my-digital-garden"
version = "0.1.0"
description = "my personal wiki"
authors = ["Aleksei Mikhalev <mikhalev.aleksei1@gmail.com>"]
readme = "README.md"
packages = [{include = "my_digital_garden"}]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.4.2"
mkdocs-section-index = "^0.3.4"
mkdocs-material = "^8.5.11"
mkdocs-glightbox = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
